[package]
name = "hushmark"
version = "0.1.3"
description = "A small Markdown reader built with Tauri."
authors = ["Jonathan Lahav"]
edition = "2021"

[lib]
name = "hushmark_lib"

[build-dependencies]
tauri-build = { version = "2", features = [] }

[dependencies]
ammonia = "4"
base64 = "0.22"
percent-encoding = "2.3"
pulldown-cmark = "0.13"
serde = { version = "1", features = ["derive"] }
tauri = { version = "2", features = [] }

[target.'cfg(windows)'.dependencies]
windows-sys = { version = "0.61", features = ["Win32_Storage_FileSystem", "Win32_UI_Shell"] }
winreg = "0.55"

[profile.release]
codegen-units = 1
lto = "thin"
panic = "abort"
strip = "symbols"
